# ErkiApi

./: .classpath  .gitignore  .project  CMakeLists.txt  Changelog  Doxyfile  README  build.xml
cmake/: CMakeLists.txt  Finderkiplot.cmake  Finderkiutil.cmake  Findliberkiapi.cmake  Findliberkiplot.cmake  Findliberkiutil.cmake
pkgbuild/: PKGBUILD
pkgbuild/erkiplot/: PKGBUILD
src/: CMakeLists.txt
src/erki/api/config/: Config.java  Entry.java  JavaObjectConfig.java  Key.java  Option.java  SimpleConfig.java  XmlConfig.java
src/erki/api/lcars/: ButtonBarButton.java  LCARSButton.java  LCARSComboBox.java  LCARSErrorBox.java  LCARSFrame.java  LCARSInfoBox.java  LCARSLabel.java  LCARSTabbedPane.java  LCARSTextField.java  LCARSUtil.java  LCARSYesNoQuestion.java
src/erki/api/plot/: CoordinateAxis.java  CoordinateTransformer.java  Drawable.java  DrawablePoint.java  ExternalDrawerChartPanel.java  Plot2D.java  Plot2d.java  RenderingInfoAndAutoRangingXYPlot.java
src/erki/api/plot/action/: Action.java  AutoRange.java  CenterOnOrigin.java  Move.java  PdfExport.java  PopupMenu.java  Zoom.java
src/erki/api/plot/drawables/: BoxAxes.java  CirclePoint.java  ColouredCirclePoint.java  ColouredCrossPoint.java  CrossPoint.java  Drawable.java  DrawableLine.java  FixedTickWidthPositiveAxisWithArrow.java  FixedTickWidthPositiveXAxisWithArrow.java  FixedTickWidthPositiveYAxisWithArrow.java  LineAxes.java  LineAxesAtBorder.java  LineAxesAtZero.java  PositiveXAxisWithArrow.java  PositiveYAxisWithArrow.java  StyledDrawable.java
src/erki/api/plot/pdfexport/: CancelListener.java  GeneralOptionPanel.java  PlotOptionPanel.java  SavePdfListener.java  SophisticatedPdfExport.java  TogglePlotListener.java
src/erki/api/plot/style/: BasicStyleProvider.java  DefaultStyleProvider.java  StyleConstants.java  StyleKey.java  StyleProperty.java  StylePropertyKey.java  StyleProvider.java  StyledDateAxis.java  StyledNumberAxis.java
src/erki/api/storage/: JavaObjectStorage.java  Key.java  Storage.java  XmlStorage.java
src/erki/api/util/: CommandLineParser.java  Crypto.java  CsvPlot.java  ErrorBox.java  JTextField.java  Level.java  LocaleException.java  LocaleNotFoundException.java  LocalizationException.java  Localizor.java  Log.java  MathUtil.java  Observer.java  OnlineCsvPlot.java  ParseException.java  PathUtil.java  RuntimeOutput.java  RuntimeUtil.java  SoundPlayer.java  TimeSeries.java
src/gl/: CMakeLists.txt  frame.cpp  frame.hpp
src/lcars/: CMakeLists.txt  Lcars.hpp  LcarsFrame.cpp  LcarsFrame.hpp  null_pointer_exception.cpp
src/plot/: CMakeLists.txt  CoordinateTransformer.cpp  CoordinateTransformer.hpp  Plot2D.cpp  Plot2D.hpp  Plot2d.cpp  Plot2d.hpp  Range.hpp  coordinate_transformer.cpp  coordinate_transformer.hpp  frame.cpp  frame.hpp  plot2d.cpp  plot2d.hpp
src/plot/actions/: Action.hpp  CMakeLists.txt  Move.cpp  Move.hpp
src/plot/axes/: ArrowAxes.cpp  ArrowAxes.hpp  Axes.hpp  CMakeLists.txt
src/plot/drawers/: CMakeLists.txt  Drawer.hpp  Line.cpp  Line.hpp  Point.cpp  Point.hpp  drawer.hpp  point.cpp  point.hpp
src/plot/drawers/axes/: ArrowAxes.cpp  ArrowAxes.hpp  CMakeLists.txt
src/plot/style/: CMakeLists.txt  Key.cpp  Key.hpp  Object.hpp  StyleProvider.cpp  StyleProvider.hpp  main.cpp  style_provider.cpp  style_provider.hpp
src/plot/style/wrappers/: Colour.hpp
src/test/: CMakeLists.txt  LogTest.cpp  PlotTest.cpp  TestPlot.cpp  command_line_parser_test.cpp  log_test.cpp  test_command_line_parser.cpp  test_gl.cpp  test_log.cpp  test_logging.cpp  test_plot.cpp
src/util/: CMakeLists.txt  CommandLineParser.cpp  Log.cpp  Log.hpp  NullPointerException.cpp  NullPointerException.hpp  command_line_parser.cpp  command_line_parser.hpp  log.cpp  log.hpp  logging.cpp  logging.hpp  null_pointer_exception.hpp
test/erki/api/lcars/: BorderLayoutTest.java  FlowLayoutTest.java  PackTest.java
test/erki/api/plot/: AdvancedTest.java  BaMixture.java  BaRewardFactor.java  BaTanh.java  MixtureInfluenceFunction.java  RewardFactorFunction.java  SimpleTest.java  SlidingWindow.java  TanhScalingFunction.java  TemperatureCheck.java  Test.java  UsefulnessTest.java
test/erki/api/plot/ba/: BaMixture.java  BaRewardFactor.java  BaStyleProvider.java  BaSurprise.java  BaTanh.java  MarkerDrawer.java  MixtureInfluenceFunction.java  RewardFactorFunction.java  SurpriseFunction.java  TanhScalingFunction.java  TimeSeries.java  TimeSeriesPlot.java  UsefulnessTest.java
test/erki/api/plot/drawables/: ColouredCirclePoint.java  ColouredLine.java
test/erki/api/plot/em/: AnotherTest.java  LabeledPattern.java  PatternDrawer.java  SlidingWindow.java
test/erki/api/plot/mandelbrot/: Complex.java  Mandelbrot.java  SwingUI.java
test/erki/api/storage/: Identifier.java  IdentifierKey.java  SimpleTest.java
test/erki/api/util/: LogTest.java
